<resources>
    <string name="app_name">Cameroon App</string>

    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="photo_extra">Photo Extra</string>
    <string name="title_activity_confirm_photo">ConfirmPhotoActivity</string>
    <string name="title_activity_document_uploaded_confirmation">
        DocumentUploadedConfirmationActivity
    </string>
    <string name="title_activity_pin">PinActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_confirm_video">ConfirmVideoActivity</string>
    <string name="channel_name">My Channel Name</string>
    <string name="channel_description">My Channel Description</string>
    <string name="camera_taken">Your camera is currently being used by another application. Please restart your device before attempting to continue.</string>
    <string name="settings">Settings</string>
    <string name="cd_camera">Camera for taking Photos</string>
    <string name="cd_video">Camera for taking Videos</string>
    <string name="cd_audio">Microphone</string>
    <string name="county_selection">Select your location:</string>
    <string name="app_selection">Select App</string>
    <string name="save">Save</string>
</resources>
