<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DocumentSelectionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1"
            tools:context=".DocumentSelectionActivity">

            <ImageButton
                android:id="@+id/select_photo_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight=".3"
                android:src="@drawable/baseline_camera_alt_black_48"
                android:contentDescription="@string/cd_camera" />

            <ImageButton
                android:id="@+id/select_video_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight=".3"
                android:src="@drawable/baseline_videocam_black_48"
                android:contentDescription="@string/cd_video" />

            <ImageButton
                android:id="@+id/select_audio_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight=".3"
                android:src="@drawable/baseline_mic_black_48"
                android:contentDescription="@string/cd_audio" />

        </LinearLayout>
    </RelativeLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/document_selection_fragment" />
</android.support.v4.widget.DrawerLayout>